--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "Choco23!",
+    "password": "puppy159",
     "database": "secondhandshop_development",
     "host": "127.0.0.1",
     "dialect": "mysql"
